# Python-Fastapi-Template

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py  database.py  main.py
app/api/: __init__.py
app/api/controller/: __init__.py  demo.py
app/api/dao/: __init__.py
app/api/models/: __init__.py
app/api/schemas/: __init__.py  demo.py
app/api/service/: __init__.py
app/common/: __init__.py
app/common/result/: __init__.py  code.py  result.py
app/common/util/: LogHandler.py
app/middleware/: __init__.py  auth.py  cors.py
